err/products.mailarchive.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Products'...
Listing './lib/python3.5/site-packages/Products/MailArchive'...
Listing './lib/python3.5/site-packages/Products/MailArchive/modules'...
Compiling './lib/python3.5/site-packages/Products/MailArchive/modules/cleanhtml.py'...
***   File "./lib/python3.5/site-packages/Products/MailArchive/modules/cleanhtml.py", line 166
    print res
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/Products/MailArchive/modules/imap_client.py'...
***   File "./lib/python3.5/site-packages/Products/MailArchive/modules/imap_client.py", line 46
    except Exception, error:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/Products/MailArchive/modules/mbox.py'...
***   File "./lib/python3.5/site-packages/Products/MailArchive/modules/mbox.py", line 241
    print b.cache
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/Products/MailArchive/modules/mbox_filters.py'...
***   File "./lib/python3.5/site-packages/Products/MailArchive/modules/mbox_filters.py", line 70
    except Exception,e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/Products.MailArchive-1.5.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
